--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "npm run devnp"
+    "start": "npm run dev"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
